--- a/.nuget/Zirpl.Common.nuspec
+++ b/.nuget/Zirpl.Common.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Zirpl.Common</id>
     <version>$version$</version>
-    <title>ZCommon</title>
+    <title>Zirpl's Common</title>
     <authors>Zirpl Software</authors>
     <owners>Zirpl Software</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -11,11 +11,11 @@
     <language>en-US</language>
     <copyright>Copyright 2014</copyright>
     <tags></tags>
-    <projectUrl>https://github.com/nlafratta/ZAppEngine</projectUrl>
-    <licenseUrl>https://github.com/nlafratta/ZAppEngine/blob/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/zirplsoftware/ZAppEngine</projectUrl>
+    <licenseUrl>https://github.com/zirplsoftware/ZAppEngine/blob/master/LICENSE</licenseUrl>
     <releaseNotes>
       <![CDATA[
-            For full release notes see https://github.com/nlafratta/ZAppEngine/blob/master/releasenotes.md
+            For full release notes see https://github.com/zirplsoftware/ZAppEngine/blob/master/releasenotes.md
             ]]>
     </releaseNotes>
   </metadata>
