--- a/.nuget/Zirpl.AppEngine.Testing.nuspec
+++ b/.nuget/Zirpl.AppEngine.Testing.nuspec
@@ -3,19 +3,19 @@
   <metadata>
     <id>Zirpl.AppEngine.Testing</id>
     <version>$version$</version>
-    <title>ZAppEngine- Testing</title>
+    <title>Zirpl's AppEngine- Testing</title>
     <authors>Zirpl Software</authors>
     <owners>Zirpl Software</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Common functionality to support testing of ZAppEngine projects</description>
+    <description>Common functionality to support testing of Zirpl AppEngine projects</description>
     <language>en-US</language>
     <copyright>Copyright 2014</copyright>
     <tags></tags>
-    <projectUrl>https://github.com/nlafratta/ZAppEngine</projectUrl>
-    <licenseUrl>https://github.com/nlafratta/ZAppEngine/blob/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/zirplsoftware/ZAppEngine</projectUrl>
+    <licenseUrl>https://github.com/zirplsoftware/ZAppEngine/blob/master/LICENSE</licenseUrl>
     <releaseNotes>
       <![CDATA[
-            For full release notes see https://github.com/nlafratta/ZAppEngine/blob/master/releasenotes.md
+            For full release notes see https://github.com/zirplsoftware/ZAppEngine/blob/master/releasenotes.md
             ]]>
     </releaseNotes>
     <dependencies>
