--- a/.nuget/Zirpl.AppEngine.Web.nuspec
+++ b/.nuget/Zirpl.AppEngine.Web.nuspec
@@ -3,19 +3,19 @@
   <metadata>
     <id>Zirpl.AppEngine.Web</id>
     <version>$version$</version>
-    <title>ZAppEngine- Web</title>
+    <title>Zirpl's AppEngine- Web</title>
     <authors>Zirpl Software</authors>
     <owners>Zirpl Software</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Extends ZAppEngine providing functionality to quickly create and deployweb-based  data-driven applications.</description>
+    <description>Extends Zirpl AppEngine providing functionality to quickly create and deploy web-based data-driven applications.</description>
     <language>en-US</language>
     <copyright>Copyright 2014</copyright>
     <tags></tags>
-    <projectUrl>https://github.com/nlafratta/ZAppEngine</projectUrl>
-    <licenseUrl>https://github.com/nlafratta/ZAppEngine/blob/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/zirplsoftware/ZAppEngine</projectUrl>
+    <licenseUrl>https://github.com/zirplsoftware/ZAppEngine/blob/master/LICENSE</licenseUrl>
     <releaseNotes>
       <![CDATA[
-            For full release notes see https://github.com/nlafratta/ZAppEngine/blob/master/releasenotes.md
+            For full release notes see https://github.com/zirplsoftware/ZAppEngine/blob/master/releasenotes.md
             ]]>
     </releaseNotes>
     <dependencies>
