--- a/Zirpl.Common.Silverlight5/Zirpl.Common.Silverlight5.csproj
+++ b/Zirpl.Common.Silverlight5/Zirpl.Common.Silverlight5.csproj
@@ -449,6 +449,9 @@
     <Compile Include="..\Zirpl.Common\NumberExtensions.cs">
       <Link>NumberExtensions.cs</Link>
     </Compile>
+    <Compile Include="..\Zirpl.Common\Properties\AssemblyInfo.cs">
+      <Link>Properties\AssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="..\Zirpl.Common\Reflection\Accessor.cs">
       <Link>Reflection\Accessor.cs</Link>
     </Compile>
@@ -521,10 +524,6 @@
     <Compile Include="..\Zirpl.Common\Xml\Serialization\XmlSerializableBase.cs">
       <Link>Xml\Serialization\XmlSerializableBase.cs</Link>
     </Compile>
-    <Compile Include="..\Zirpl.Common\Properties\AssemblyInfo_common.cs">
-      <Link>Properties\AssemblyInfo_common.cs</Link>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\Zirpl.Common\Linq\Dynamic Expressions.html">
