--- a/Zirpl.AppEngine.Testing/Zirpl.AppEngine.Testing.csproj
+++ b/Zirpl.AppEngine.Testing/Zirpl.AppEngine.Testing.csproj
@@ -116,6 +116,7 @@
     <Compile Include="UpdatableProperty.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
