--- a/Zirpl.AppEngine.Tests/Zirpl.AppEngine.Tests.csproj
+++ b/Zirpl.AppEngine.Tests/Zirpl.AppEngine.Tests.csproj
@@ -41,9 +41,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\FluentAssertions.3.2.2\lib\net45\FluentAssertions.Core.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+    <Reference Include="nunit.framework, Version=2.6.3.13283, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -62,7 +62,9 @@
     <Compile Include="Service\AbstractedSupportsImplServiceTests.cs" />
     <Compile Include="Validation\ValidationUtilitiesTests.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Zirpl.AppEngine.Testing\Zirpl.AppEngine.Testing.csproj">
       <Project>{366c5119-60f8-4c0b-9d03-fd423bd5b6c5}</Project>
