--- a/Zirpl.Examples.ContactManager.Web.Tests/Zirpl.Examples.ContactManager.Web.Tests.csproj
+++ b/Zirpl.Examples.ContactManager.Web.Tests/Zirpl.Examples.ContactManager.Web.Tests.csproj
@@ -41,6 +41,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
