--- a/.nuget/Zirpl.Common.nuspec
+++ b/.nuget/Zirpl.Common.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Zirpl.Common</id>
     <version>$version$</version>
-    <title>Zirpl's Common</title>
+    <title>Common</title>
     <authors>Zirpl Software</authors>
     <owners>Zirpl Software</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
