--- a/.nuget/Zirpl.AppEngine.Testing.nuspec
+++ b/.nuget/Zirpl.AppEngine.Testing.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Zirpl.AppEngine.Testing</id>
     <version>$version$</version>
-    <title>Zirpl's AppEngine- Testing</title>
+    <title>AppEngine- Testing</title>
     <authors>Zirpl Software</authors>
     <owners>Zirpl Software</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
