--- a/Zirpl.AppEngine.VisualStudioAutomation/packages.config
+++ b/Zirpl.AppEngine.VisualStudioAutomation/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
+  <package id="Zirpl.FluentReflection" version="1.0.0-CI00023" targetFramework="net451" />
   <package id="Zirpl.Logging" version="2.1.2" targetFramework="net451" />
 </packages>
